add margin in turmas list itens

--- a/frontend/src/main/frontend/src/app/main/turma/turma.html
+++ b/frontend/src/main/frontend/src/app/main/turma/turma.html
@@ -138,21 +138,29 @@
           </md-checkbox>
           <div class="item" layout="row" layout-align="space-around end">
 
-          <p class="hide show-gt-xs numero idTurma">
-            {{turma.id}}
-          </p>
+          <div>
+            <p class="hide show-gt-xs numero idTurma">
+              {{turma.id}}
+            </p>
+          </div>
 
-          <p class="hide show-gt-sm texto nomeTurma">
-            {{turma.nome}}
-          </p>
+          <div>
+            <p class="hide show-gt-sm texto nomeTurma">
+              {{turma.nome}}
+            </p>
+          </div>
 
-          <p class="ride show-gt-sm texto periodoTurma">
-            {{turma.periodo}}
-          </p>
+          <div>
+            <p class="ride show-gt-sm texto periodoTurma">
+              {{turma.periodo}}
+            </p>
+          </div>
 
-          <p class="hide show-gt-sm texto cpfEducador">
-            {{turma.cpfEducador}}
-          </p>
+          <div>
+            <p class="hide show-gt-sm texto cpfEducador">
+              {{turma.cpfEducador}}
+            </p>
+          </div>
 
         </div>
           <div class="md-secondary actions" layout="row" layout-align="start center">
