--- a/frontend/src/main/frontend/src/app/main/turma/turma.scss
+++ b/frontend/src/main/frontend/src/app/main/turma/turma.scss
@@ -117,7 +117,7 @@
                         .editable-controls {
                             display: flex;
                             flex-direction: row;
-                            align-items: center;
+                            align-items: space-between;
                             justify-content: flex-start;
 
                             .editable-input {
@@ -213,12 +213,21 @@
 
 
 div.item p.nomeTurma{
-    margin-right: 45px;
+    margin-left: 110px;
+    margin-right: 95px;
     width: 200px;
 }
 
-div.item p.idTurma{
+div.item p.periodoTurma{
+    margin-left: 95px;
+}
 
-    margin-right: 65px;
+div.item p.cpfEducador{
+    margin-left: 135px;
+}
+
+div.item p.idTurma{
+    margin-right: 110px;
+    margin-left: -20px;
     width: 70px;
 }
