--- a/frontend/src/main/frontend/src/app/main/associados/associados.scss
+++ b/frontend/src/main/frontend/src/app/main/associados/associados.scss
@@ -212,7 +212,8 @@
 }
 
 div.item p.pagamentoAssociado{
-    margin-right: -30px;
+    margin-left: 60px;
+    margin-right: 30px;
     width: 70px;
 }
 
@@ -235,12 +236,12 @@ div.item p.cpfAssociado{
 
 
 div.item p.telefone{
-    margin-right: 65px;
+    margin-right: 95px;
     width: 70px;
 }
 
 div.item p.emailAssociado{
-
+    margin-left: 25px;
     margin-right: 70px;
     width: 150px;
 }
