add labels in gerenciar pagamentos list

--- a/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
+++ b/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
@@ -63,6 +63,7 @@
             </md-menu-item>
           </md-menu-content>
         </md-menu>
+
       </div>
 
       <div class="multi-select-actions">
@@ -155,6 +156,15 @@
 
             </md-menu>
 
+          </div>
+
+          <div class="atributos" layout-align="space-around end">
+            <label>Id</label>
+            <label>Cpf</label>
+            <label>Nome</label>
+            <label>Valor</label>
+            <label>Forma de Pgto</label>
+            <label>Data de Pgto</label>
           </div>
 
         </md-subheader>
