--- a/frontend/src/main/frontend/src/app/main/pagamento/pagamento.scss
+++ b/frontend/src/main/frontend/src/app/main/pagamento/pagamento.scss
@@ -213,7 +213,8 @@
 
 
 div.item p.id{
-    margin-right: 60px;
+    margin-left: -20px;
+    margin-right: 100px;
     width: 40px;
     text-align: right;
 }
@@ -223,11 +224,11 @@ div.item p.cpf{
 }
 
 div.item p.nome{
-    margin-right: 40px;
+    margin-right: 35px;
 }
 
 div.item p.formaPagamento{
-    margin-right: 20px;
+    margin-right: 100px;
 }
 
 div.item p.dataPagamento{
@@ -235,5 +236,5 @@ div.item p.dataPagamento{
 }
 
 div.item p.valorPago{
-    margin-right: 80px;
+    margin-right: 120px;
 }
