fix nome turma not showing issue

--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -31,7 +31,7 @@
 
         <md-input-container flex="100" flex-gt-xs="30">
           <md-icon md-font-icon="icon-clipboard-text"></md-icon>
-          <input type="text" name="nome" ng-model="vm.turma.account" placeholder="Nome da Turma">
+          <input type="text" name="nome" ng-model="vm.turma.nome" placeholder="Nome da Turma">
         </md-input-container>
       </div>
 
