--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.html
@@ -43,6 +43,7 @@
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
+        <label class="nascEducador">Nascimento</label>
         <md-icon md-font-icon="icon-calendar-today"></md-icon>
         <md-datepicker ng-model="vm.educador.dataNasc" md-placeholder="Nascimento"></md-datepicker>
       </md-input-container>
