--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.scss
@@ -229,7 +229,10 @@
 
     .md-button.btnExcel {
         color: white;
-        background-color: rgb(69, 137, 96); 
+        background-color: rgb(69, 137, 96);
+        position: fixed;
+        bottom: 8px;
+        right: 500px;
     }
 }
 
@@ -271,4 +274,3 @@ div.item p.dataNascAluno{
   margin-top: 10px;
   margin-bottom: 5px;
 }
-
