--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -19,6 +19,12 @@
           <input ng-model="vm.turma.cpfEducador" type="text" mask="999.999.999-99" ng-disabled="!vm.newTurma" required>
         </md-input-container>
 
+        <md-input-container>
+          <label>Nome do Educador</label>
+          <md-icon md-font-icon="icon-account"></md-icon>
+          <input ng-model="vm.nomeEducador" type="text" disabled>
+        </md-input-container>
+
         <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="15">
           <label>Período</label>
           <md-icon md-font-icon="icon-clock"></md-icon>
