--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.scss
@@ -5,9 +5,9 @@ md-dialog {
      width: 12px;
     }
     &.turma-dialog {
-        max-width: 1400px;
-        width: 1400px;
-        height: 1000px;
+        max-width: 1200px;
+        width: 1300px;
+        height: 500px;
 
         md-toolbar {
             height: 240px;
@@ -151,4 +151,10 @@ md-dialog {
     }
 
 
+}
+
+.aluno-item{
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
 }
