modify alunos list in turmas layout

--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.scss
@@ -153,8 +153,14 @@ md-dialog {
 
 }
 
-.aluno-item{
-  display: flex;
-  flex-flow: row;
-  justify-content: space-around;
+.alunosinout {
+  margin-bottom: -7px;
+}
+
+.headers {
+  margin-bottom: -14px;
+
+  h3 {
+    font-weight: bold;
+  }
 }
