fix typo in filter

--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
@@ -49,7 +49,7 @@
                               <input type="number" min="2000" placeholder="2017" ng-model="vm.anoInicial">
                           </div>
 
-                          <div ng-if="vm.tipoFiltro == 'Entre dois ou mais Mêses do Mesmo Ano'" layout="row" layout-align="space-around center">
+                          <div ng-if="vm.tipoFiltro == 'Entre dois ou mais Meses do Mesmo Ano'" layout="row" layout-align="space-around center">
                               <p class="text">Mes Inicial: </p>
                               <input type="number" min="1" max="12" placeholder="1" ng-model="vm.mesInicial">
 
@@ -60,7 +60,7 @@
                               <input type="number" min="2000" placeholder="2017" ng-model="vm.anoInicial">
                           </div>
 
-                          <div ng-if="vm.tipoFiltro == 'Entre Mêses e Anos'" layout="row" layout-align="space-around center">
+                          <div ng-if="vm.tipoFiltro == 'Entre Meses e Anos'" layout="row" layout-align="space-around center">
                               <p class="text">Mes Inicial:</p>
                               <input type="number" min="1" max="12" placeholder="1" ng-model="vm.mesInicial">
 
