changed pdf and excel icons to white

--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
@@ -146,7 +146,7 @@
     <md-button class="md-raised md-accent" ng-click="vm.openManipularOcorrenciaDialog($event)">
       Adicionar Ocorrencia
     </md-button>
-    <md-button ng-click="vm.exportarExcel()" class="btnExcel">
+    <md-button class="btnExcel" ng-click="vm.exportarExcel()">
       <md-icon md-font-icon="icon-file-excel" class="iconExcel"></md-icon>
       Excel
     </md-button>
