--- a/frontend/src/main/frontend/src/app/index.scss
+++ b/frontend/src/main/frontend/src/app/index.scss
@@ -40,3 +40,21 @@ div.item p.numero{
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.md-button.md-default-theme.btnExcel {
+  color: #FFF;
+  background-color: #407F59;
+
+  md-icon {
+    color: #FFF;
+  }
+}
+
+.md-button.md-default-theme.btnPdf {
+  color: #FFF;
+  background-color: #DA473E;
+
+  md-icon {
+    color: #FFF;
+  }
+}
