--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
@@ -2,6 +2,9 @@
 
   <div class=" md-toolbar-tools md-toolbar-tools-top" layout="row" layout-align="space-between center">
     <span class="title">{{vm.title}}</span>
+    <md-button class="md-icon-button" ng-click="vm.closeDialog()" aria-label="Fechar diálogo">
+      <md-icon md-font-icon="icon-close"></md-icon>
+    </md-button>
   </div>
 
   <md-dialog-content ms-scroll>
