add icon on delete all ocorrencies

--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.html
@@ -208,6 +208,7 @@
       <md-menu-content width="3">
         <md-menu-item>
           <md-button ng-click="vm.deletarTodasAsOcorrencias(ev)">
+            <md-icon md-font-icon="icon-delete"></md-icon>
             Deletar TODAS as ocorrencias
           </md-button>
         </md-menu-item>
