--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.html
@@ -77,6 +77,11 @@
 
                     </div>
 
+                    <div class="atributos" layout-align="space-around start">
+                      <label class="labelRA" flex="10">RA</label>
+                      <label class="labelNome" flex="70">Nome</label>
+                    </div>
+
                 </md-subheader>
 
                 <md-list-item class="ocorrencia-item md-white-bg" md-ink-ripple ng-repeat="alu in vm.alunos | filter: vm.search | filter: global.search | filterByIds:vm.filterIds |  orderBy: vm.listOrder :vm.listOrderAsc | filter:query as filteredAlunos track by alu.nome"
