--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.scss
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.scss
@@ -198,14 +198,6 @@
         height: 48px;
     }
 
-    div.item p.data{
-        width: 200px;
-        text-align: center;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-
     div.item p.texto{
         width: 220px;
         text-align: left;
@@ -216,7 +208,8 @@
 
     div.item p.numero{
         width: 50px;
-        padding-right: 140px;
+        padding-right: 160px;
+        margin-left: 13px;
         font-weight: bold;
         text-align: right;
         overflow: hidden;
