--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
@@ -24,6 +24,17 @@
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
+        <label>Confirmar Senha</label>
+        <md-icon md-font-icon="icon-key"></md-icon>
+        <input name="confirmarSenha" ng-model="vm.usuario.confirmaSenha" type="password" required compare-to="vm.usuario.senha">
+        <div ng-messages="usuarioForm.confirmarSenha.$error" role="alert" multiple>
+            <div ng-message="compareTo">
+                <span>As senhas precisam ser iguais</span>
+            </div>
+        </div>
+      </md-input-container>
+
+      <md-input-container class="md-icon-float md-block">
         <label>E-mail</label>
         <md-icon md-font-icon="icon-email"></md-icon>
         <input ng-model="vm.usuario.email" type="email">
