changed data label in manipular dialog

--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-manipular-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-manipular-dialog.html
@@ -13,7 +13,7 @@
         <md-dialog-content ms-scroll>
 
             <md-input-container class="md-icon-float md-block">
-                <label>Data da Ocorrencia</label>
+                <label>Data</label>
                 <md-icon class="date">date_range</md-icon>
                 <md-datepicker ng-model="vm.ocorrencia.data" required md-open-on-focus ng-disabled="!vm.newOcorrencia"></md-datepicker>
             </md-input-container>
